# NVIDIA-VPI-Rescale

./: .gitignore  CMakeLists.txt  README.md  main.cpp
